pip: Install celery.

--- a/Pipfile
+++ b/Pipfile
@@ -9,6 +9,7 @@ django-tenants = "*"
 redis = "*"
 psycopg = { extras = ["binary"], version = "*" }
 python-dotenv = "*"
+celery = "*"
 
 [dev-packages]
 
