--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -53,6 +53,31 @@ services:
     volumes:
       - pgadmin_data:/var/lib/pgadmin
 
+  celery:
+    container_name: bloggies-celery-worker
+    build:
+      context: .
+      dockerfile: deployments/development/Dockerfile
+    depends_on:
+      - redis-tenant
+      - web
+    volumes:
+      - .:/usr/src/app
+    environment:
+      - SECRET_KEY=${SECRET_KEY}
+      - DB_NAME=blog-tenant-db
+      - DB_USER=${DB_USER}
+      - DB_PASSWORD=${DB_PASSWORD}
+      - DB_HOST=db
+      - DB_PORT=5432
+      - REDIS_PROTOCOL=redis
+      - REDIS_PASSWORD=${REDIS_PASSWORD}
+      - REDIS_HOST=redis-tenant
+      - REDIS_PORT=6379
+      - REDIS_DB_CELERY=${REDIS_DB_CELERY}
+      - DJANGO_SETTINGS_MODULE=bloggies.settings.settings_development
+    command: [ "celery", "-A", "bloggies", "worker", "--loglevel=info" ]
+
 volumes:
   postgres_data:
   pgadmin_data:
