--- a/Pipfile
+++ b/Pipfile
@@ -10,6 +10,7 @@ redis = "*"
 psycopg = { extras = ["binary"], version = "*" }
 python-dotenv = "*"
 celery = "*"
+factory-boy = "*"
 
 [dev-packages]
 
