--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -40,6 +40,7 @@ jobs:
         uses: actions/setup-python@v5
         with:
           python-version: "3.9"
+          cache: "pipenv"
 
       - name: 📦 Install Pipenv
         run: |
